--- a/css/style.css
+++ b/css/style.css
@@ -1056,7 +1056,7 @@ body .overlay {
           flex-direction: column;
   min-height: 100vh;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .main {
