--- a/css/style.css
+++ b/css/style.css
@@ -1040,7 +1040,7 @@ li:hover a.footer__text {
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   background: #030812;
   font-family: "Urbanist", sans-serif;
 }
@@ -1056,7 +1056,7 @@ body .overlay {
           flex-direction: column;
   min-height: 100vh;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .main {
