--- a/css/style.css
+++ b/css/style.css
@@ -9,25 +9,23 @@
   z-index: 99;
 }
 
-.fixed__nav {
+.header.fixed__nav {
   position: fixed;
   background: #030812;
   left: 0;
   top: 0;
   right: 0;
   z-index: 999;
+  padding: 10px 0;
 }
 
 .header__link {
   font-weight: bold;
   font-style: normal;
-  color: #FFFFFF !important;
+  color: #ffffff !important;
 }
 
 .header__body {
-  -webkit-transition: 0.4s ease 0s;
-  -o-transition: 0.4s ease 0s;
-  transition: 0.4s ease 0s;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,7 +35,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
 }
 
 .header__menu {
@@ -66,13 +63,13 @@
           align-items: center;
   width: 296px;
   height: 48px;
-  background: #3C485D;
+  background: #3c485d;
   border-radius: 8px;
 }
 
 .header__form-button {
   width: 42px;
-  height: 99%;
+  height: 100%;
   background: inherit;
   border: none;
   border-radius: 8px;
@@ -86,33 +83,33 @@
 
 .header__form-input {
   width: 100%;
-  height: 99%;
+  height: 100%;
   background: inherit;
   border: none;
   border-radius: 8px;
   font-weight: normal;
   font-style: normal;
-  color: #8393AF;
+  color: #8393af;
 }
 
 .header__form-input::-webkit-input-placeholder {
-  color: #8393AF;
+  color: #8393af;
 }
 
 .header__form-input::-moz-placeholder {
-  color: #8393AF;
+  color: #8393af;
 }
 
 .header__form-input:-ms-input-placeholder {
-  color: #8393AF;
+  color: #8393af;
 }
 
 .header__form-input::-ms-input-placeholder {
-  color: #8393AF;
+  color: #8393af;
 }
 
 .header__form-input::placeholder {
-  color: #8393AF;
+  color: #8393af;
 }
 
 .header__container {
@@ -140,8 +137,8 @@
   display: -ms-flexbox;
   display: flex;
   padding: 16px 24px;
-  background: -o-linear-gradient(242.33deg, #FDAE8F 3.43%, #FD1C68 104.7%);
-  background: linear-gradient(207.67deg, #FDAE8F 3.43%, #FD1C68 104.7%);
+  background: -o-linear-gradient(242.33deg, #fdae8f 3.43%, #fd1c68 104.7%);
+  background: linear-gradient(207.67deg, #fdae8f 3.43%, #fd1c68 104.7%);
   border-radius: 12px;
 }
 
@@ -165,12 +162,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 55px;
 }
 
 .start__container {
   max-width: 470px;
-  z-index: 99;
+  margin-right: 50px;
 }
 
 .start__title {
@@ -231,7 +227,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 30px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-top: 56px;
@@ -239,8 +234,8 @@
 
 .work__item {
   max-width: 270px;
-  z-index: 99;
   text-align: center;
+  margin-right: 30px;
 }
 
 .work__item:nth-child(2) .work__item-img {
@@ -251,6 +246,10 @@
 .work__item:nth-child(3) .work__item-img {
   background: -o-linear-gradient(23.73deg, #FE6F2D -10.45%, #FDCE38 76.78%);
   background: linear-gradient(66.27deg, #FE6F2D -10.45%, #FDCE38 76.78%);
+}
+
+.work__item:last-child {
+  margin-right: 0;
 }
 
 .work__item:last-child .work__item-img {
@@ -479,7 +478,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 30px;
   margin-top: 56px;
 }
 
@@ -489,7 +487,11 @@
           backdrop-filter: blur(40px);
   border-radius: 24px;
   padding: 24px;
-  z-index: 99;
+  margin-right: 30px;
+}
+
+.collection__item:last-child {
+  margin-right: 0;
 }
 
 .collection__item-img {
@@ -539,17 +541,8 @@
 }
 
 .sellers__items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 30px;
   margin-top: 56px;
 }
@@ -566,8 +559,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 99;
-  max-width: 270px;
+  width: 100%;
 }
 
 .sellers__item-content {
@@ -650,7 +642,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 16px;
 }
 
 .picks__item-button {
@@ -668,6 +659,7 @@
   border-radius: 12px;
   height: 56px;
   color: #FFFFFF !important;
+  margin-right: 12px;
 }
 
 .picks__item-button--black {
@@ -677,6 +669,10 @@
 .picks__item-button--color {
   background: -o-linear-gradient(242.33deg, #FDAE8F 3.43%, #FD1C68 104.7%);
   background: linear-gradient(207.67deg, #FDAE8F 3.43%, #FD1C68 104.7%);
+}
+
+.picks__item-button:last-child {
+  margin-right: 0;
 }
 
 .picks__button {
@@ -823,6 +819,9 @@
       -ms-transform: translate(0, -1px);
           transform: translate(0, -1px);
   z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .section__decor {
@@ -910,10 +909,6 @@
           justify-content: flex-start;
 }
 
-.footer__container {
-  z-index: 99;
-}
-
 li:hover a.footer__text {
   border-bottom: 1px solid #8393AF;
 }
@@ -982,7 +977,6 @@ li:hover a.footer__text {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 30px;
 }
 
 .footer__list {
@@ -997,6 +991,11 @@ li:hover a.footer__text {
   margin-bottom: 80px;
   min-width: 170px;
   width: 100%;
+  margin-right: 30px;
+}
+
+.footer__list:last-child {
+  margin-right: 0;
 }
 
 .footer__list .footer__title {
@@ -1013,7 +1012,6 @@ li:hover a.footer__text {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 30px;
 }
 
 .footer__icons {
@@ -1023,7 +1021,15 @@ li:hover a.footer__text {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 7px;
+  margin-right: 30px;
+}
+
+.footer__icons .footer__img {
+  margin-right: 7px;
+}
+
+.footer__icons .footer__img:last-child {
+  margin-right: 0;
 }
 
 /*------------------------------- Default styles -------------------------------*/
@@ -1191,58 +1197,43 @@ picture {
 }
 
 @media (max-width: 1182px) {
-  .header {
-    -webkit-transition: 0.4s ease 0s;
-    -o-transition: 0.4s ease 0s;
-    transition: 0.4s ease 0s;
-  }
-
-  .header.active {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 9999;
-    background: #030812;
-    overflow-y: auto;
-    overflow-x: hidden !important;
-  }
-
-  .header.active::-webkit-scrollbar {
-    display: none;
-  }
-
-  .header.active .header__body {
-    height: 100vh;
-  }
-
-  .header__logo {
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-
   .header__burger {
-    position: absolute;
-    top: 23px;
-    right: 0;
+    position: relative;
     width: 30px;
+    min-width: 30px;
+    max-width: 30px;
     height: 20px;
-    z-index: 3;
+    z-index: 1000;
+    cursor: pointer;
   }
 
   .header__burger::after,
-  .header__burger::before {
+  .header__burger::before,
+  .header__burger span {
     content: "";
     position: absolute;
     width: 100%;
     height: 2px;
     left: 0px;
     background-color: #fff;
-    -webkit-transition: 0.4s ease 0s;
-    -o-transition: 0.4s ease 0s;
-    transition: 0.4s ease 0s;
+    -webkit-transition: 0.3s ease 0s;
+    -o-transition: 0.3s ease 0s;
+    transition: 0.3s ease 0s;
+  }
+
+  .header__burger::before {
+    top: 0px;
+  }
+
+  .header__burger::after {
+    bottom: 0px;
+  }
+
+  .header__burger span {
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+        -ms-transform: translate(0, -50%);
+            transform: translate(0, -50%);
   }
 
   .header__burger.active::before {
@@ -1259,26 +1250,6 @@ picture {
     bottom: 9px;
   }
 
-  .header__burger::before {
-    top: 0px;
-  }
-
-  .header__burger::after {
-    bottom: 0px;
-  }
-
-  .header__burger span {
-    position: absolute;
-    background-color: #fff;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    top: 8px;
-    -webkit-transition: 0.4s ease 0s;
-    -o-transition: 0.4s ease 0s;
-    transition: 0.4s ease 0s;
-  }
-
   .header__burger.active span {
     -webkit-transform: scale(0);
         -ms-transform: scale(0);
@@ -1286,66 +1257,57 @@ picture {
   }
 
   .header__menu {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    margin-left: auto;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-right: 30px;
+  }
+
+  .header__menu.active {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
     width: 100%;
+    height: 100%;
+    z-index: 999;
+    background: #030812;
+    margin-right: 0;
     margin-left: 0;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    padding-right: 65px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding-top: 22px;
+    overflow-y: auto;
+  }
+
+  .header__menu.active::-webkit-scrollbar {
+    display: none;
   }
 
   .header__form {
-    -webkit-transition: 400ms ease 0s;
-    -o-transition: 400ms ease 0s;
-    transition: 400ms ease 0s;
-    opacity: 0;
-    visibility: hidden;
-    width: 100%;
-    left: 0;
-    position: absolute;
-    top: 100px;
+    display: none;
   }
 
   .header__form.active {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  .header__list {
-    -webkit-transition: all 400ms ease 0s !important;
-    -o-transition: all 400ms ease 0s !important;
-    transition: all 400ms ease 0s !important;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-    -webkit-transform: translateY(-100%);
-        -ms-transform: translateY(-100%);
-            transform: translateY(-100%);
-  }
-
-  .header__list li {
-    margin-bottom: 10px;
-  }
-
-  .header__list.active {
-    opacity: 1;
-    visibility: visible;
-    -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-            transform: translateY(0);
-  }
-
-  .header__button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: absolute;
-    right: 50px;
-    top: 5px;
+    top: 100px;
+    width: auto;
+    left: 200px;
+    right: 200px;
+  }
+
+  .work__item {
+    margin-bottom: 30px;
   }
 
   .footer__list {
@@ -1357,25 +1319,6 @@ picture {
 
   .container {
     max-width: 970px;
-  }
-}
-
-@media (max-width: 1182px) and (min-height: 460px), (max-width: 768px) and (min-height: 500px) {
-  .header {
-    overflow: hidden;
-    height: 96px;
-  }
-}
-
-@media (max-width: 1182px) and (max-height: 460px), (max-width: 768px) and (max-height: 500px) {
-  .header__list {
-    position: absolute;
-    top: 0;
-    margin-left: -50px !important;
-  }
-
-  .header__list.active {
-    top: 170px;
   }
 }
 
@@ -1406,6 +1349,7 @@ picture {
 
   .start__container {
     text-align: center;
+    margin-right: 0;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1413,6 +1357,50 @@ picture {
 }
 
 @media (max-width: 992px) {
+  .header__menu.active {
+    padding-right: 135px;
+  }
+
+  .header__form.active {
+    left: 100px;
+    right: 100px;
+  }
+
+  .header__list {
+    margin-right: 0;
+    display: none;
+  }
+
+  .header__list.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    top: calc(50% + 100px);
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-bottom: 100px;
+  }
+
+  .header__list.active li {
+    text-align: center;
+  }
+
+  .header__list.active .header__link {
+    padding: 10px 0;
+    font-size: 33px;
+  }
+
+  .work__item:last-child {
+    margin-right: 30px;
+  }
+
   .collection__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1433,6 +1421,12 @@ picture {
   .collection__item {
     max-width: 500px;
     width: 100%;
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .sellers__items {
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .filter__items {
@@ -1574,7 +1568,17 @@ picture {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 10px;
+  }
+
+  .footer__icons {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 992px) and (max-height: 500px) {
+  .header__list.active {
+    top: 350px;
   }
 }
 
@@ -1585,32 +1589,12 @@ picture {
 }
 
 @media (max-width: 768px) {
-  .header__container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .header__button {
-    -webkit-transition: 0.4s ease 0s;
-    -o-transition: 0.4s ease 0s;
-    transition: 0.4s ease 0s;
-    opacity: 0;
-    visibility: hidden;
-    position: relative;
-    right: 0;
-    top: 0;
-  }
-
-  .header__button.active {
-    opacity: 1;
-    visibility: visible;
-    top: 10px;
+  .header__menu.active {
+    padding-right: 70px;
   }
 
   .start__title {
-    font-size: calc(36px + 12 * (100vw - 300px) / 468);
+    font-size: calc(30px + 18 * (100vw - 300px) / 468);
   }
 
   .auction__container {
@@ -1620,6 +1604,28 @@ picture {
             flex-direction: column;
     text-align: center;
     gap: 20px;
+  }
+
+  .swiper-pagination {
+    margin-top: 22px;
+  }
+
+  .slide__img {
+    height: 400px;
+    width: 100%;
+  }
+
+  .slide__img picture {
+    height: 400px;
+  }
+
+  .slide__img img {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .sellers__items {
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .section__decor .decor {
@@ -1680,21 +1686,6 @@ picture {
   }
 }
 
-@media (max-width: 768px) and (max-height: 500px) {
-  .header__list {
-    margin-left: 0 !important;
-  }
-
-  .header__button {
-    position: absolute;
-    right: calc(50% - 100px);
-  }
-
-  .header__button.active {
-    top: 330px;
-  }
-}
-
 @media (max-width: 767.98px) {
   .container {
     max-width: none;
@@ -1703,18 +1694,49 @@ picture {
 }
 
 @media (max-width: 520px) {
+  .header__button {
+    display: none;
+  }
+
+  .header__button.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .work__item {
+    margin-right: 0 !important;
+  }
+
   .sellers__items {
     margin: 56px auto 0;
+    gap: 15px;
   }
 }
 
 @media (max-width: 480px) {
+  .header__logo img {
+    width: 160px;
+  }
+
+  .header__menu.active {
+    padding-top: 10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 0;
+  }
+
+  .header__form.active {
+    left: 20px;
+    right: 20px;
+  }
+
   .start__content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 20px;
   }
 
   .start__button {
@@ -1727,18 +1749,43 @@ picture {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .start__button:last-child {
+    margin-bottom: 0;
+  }
+
+  .sellers__items {
+    grid-template-columns: 1fr;
+    max-width: 270px;
+  }
+
+  .footer__menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .footer__list {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .footer__list:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer__items {
+    margin-top: 30px;
   }
 }
 
 @media (max-width: 450px) {
-  .header__logo img {
-    width: 180px;
-  }
-
-  .header__burger {
-    top: 17px;
-  }
-
   .auction {
     height: auto;
   }
@@ -1760,19 +1807,17 @@ picture {
   .footer__item .footer__item-img {
     margin: 0 0 10px 0;
   }
-
-  .footer__menu {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 }
 
 @media (max-width: 400px) {
+  .slide__img {
+    height: auto;
+  }
+
+  .slide__img picture {
+    height: auto;
+  }
+
   .slide__content {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1799,6 +1844,15 @@ picture {
   .picks__item-elements {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+  }
+
+  .picks__item-button {
+    margin-right: 0;
+    margin-bottom: 12px;
+  }
+
+  .picks__item-button:last-child {
+    margin-bottom: 0;
   }
 }
 
